--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-* {
+/* :root */
+*
+{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,32 +8,8 @@
 
 body {
   width: 100vw;
-  height: 100vh;
-}
-
-#root {
-  width: 100%;
-  height: 100%;
-}
-
-h1 {
-  color: #442ab8;
-  font-size: 2rem;
-  margin: 1rem;
-}
-
-nav {
+  height: auto;
+  background-color: #222; 
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-ul {
-  list-style-type: none;
-  display: flex;
-  gap: 1.5rem;
-}
-
-a{
-  text-decoration: none;
-}
+  flex-direction: column;
+  align-items: center; }
