--- a/src/components/Layout/Section/section.css
+++ b/src/components/Layout/Section/section.css
@@ -1,7 +1,7 @@
 .section-profile{
-    background-color: #ff7878;
+    background-color: #24c0f0;
 }
 .section-js{
-background-color: rgb(22, 35, 94);
+background-color: rgba(2, 37, 194, 0.39);
 
 }
