--- a/src/components/Layout/Section2/Section2.css
+++ b/src/components/Layout/Section2/Section2.css
@@ -25,7 +25,7 @@
     font-size: 1.2rem;
     padding: 1rem;
     border-radius: 5px;
-    background-color: blue;
+    background-color: rgb(0, 174, 255);
     color: bisque;
     cursor: pointer;
 }
