--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -5,7 +5,7 @@ header{
     justify-content: center;
     align-items: center;
     gap:1rem;
-    background-color: rgb(0, 0, 0); 
+    background-color: rgba(2, 78, 241, 0.616); 
 }
 
 
@@ -28,7 +28,7 @@ header{
         
         li > a{
         font-size: 1.5rem;
-        color: #fff;
+        color: #9d90bb;
         text-decoration: none;
         }
 
