--- a/src/components/Layout/Section2/Section2.css
+++ b/src/components/Layout/Section2/Section2.css
@@ -1,31 +1,70 @@
 .container-section2 {
+    width: 110vw;
     padding: 2rem;
-    width: 100vw;
-    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #222;
+    color: white;
 }
 
-.container-section2 > img{
-    height: 18rem;
-    height: 14rem;
+.container-section2 h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    color: #fff;
+}
+
+.content-section {
+    display: flex;
+    width: 80%;
+    max-width: 1200px;
+    height: auto;
+    background-color: #333;
     border-radius: 10px;
-}
-.container-section2 > p {
-    color: azure;
-    margin: 2rem;
-    font-size: 1.3rem;
-    text-align: center;
-
+    overflow: hidden;
 }
 
-.container-section2 > button{
-    width: 12rem;
-    font-size: 1.2rem;
+.text-section {
+    width: 50%;
+    background-color: #1a9ce8;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     padding: 1rem;
-    border-radius: 5px;
-    background-color: rgb(0, 174, 255);
-    color: bisque;
-    cursor: pointer;
 }
+
+.study-item {
+    padding: 1.5rem;
+    border-bottom: 1px solid #fff;
+}
+
+.study-item:last-child {
+    border-bottom: none;
+}
+
+.study-item h3 {
+    color: #fff;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.study-item p {
+    font-size: 1rem;
+    color: #f0f0f0;
+}
+
+.image-section {
+    width: 110%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #444;
+}
+
+.image-section img {
+    width: 100%;
+
+    height: auto;
+    border-radius: 0;
+}
+
