--- a/src/components/Layout/Header/Header.css
+++ b/src/components/Layout/Header/Header.css
@@ -1,39 +1,94 @@
-header{
+header {
     width: 100%;
     height: 10rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:1rem;
-    background-color: rgba(2, 78, 241, 0.616); 
+    background-color: rgba(2, 78, 241, 0.616);
+}
+
+header > nav {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+}
+
+.navbar-title {
+    font-size: 1.8rem;
+    color: #ffffff;
+}
+
+.navbar-list {
+    display: flex;
+    gap: 1rem;
+}
+
+.navbar-list li {
+    list-style: none;
+}
+
+.navbar-list li a {
+    font-size: 1.5rem;
+    color: #e6e4eb;
+    text-decoration: none;
+}
+
+.navbar-list li a:hover {
+    text-decoration: underline;
+    font-weight: 600;
+    text-shadow: 0 0 5px rgb(139, 130, 0);
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+    header {
+        height: 8rem;
+    }
+    
+    header > nav {
+        width: 90%;
+        padding: 0 1rem;
+    }
+
+    .navbar-title {
+        font-size: 1.5rem;
+    }
+
+    .navbar-list {
+        gap: 0.5rem;
+    }
+
+    .navbar-list li a {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        height: 6rem;
+    }
+    
+    header > nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar-title {
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .navbar-list {
+        flex-direction: column;
+        gap: 0.3rem;
+    }
+
+    .navbar-list li a {
+        font-size: 1rem;
+    }
 }
 
 
-    header > nav {
-        width: 100%; 
-        height: 100%;
-        display:flex;
-        justify-content:center;
-        align-items:center;
-        }
-
-        nav > ul {
-        display: flex;
-        gap: 1rem;
-        }
-        
-        ul > li {
-        list-style: none;
-        }
-        
-        li > a{
-        font-size: 1.5rem;
-        color: #9d90bb;
-        text-decoration: none;
-        }
-
-        li > a:hover{
-        text-decoration: underline;
-        font-weight: 600;
-        text-shadow: 0 0 5px rgb(139, 130, 0);
-        }
