--- a/src/components/Layout/Section2/Section2.css
+++ b/src/components/Layout/Section2/Section2.css
@@ -16,8 +16,8 @@
 
 .content-section {
     display: flex;
-    width: 80%;
-    max-width: 1200px;
+    width:98%;
+    max-width: 1400px;
     height: auto;
     background-color: #333;
     border-radius: 10px;
@@ -25,7 +25,7 @@
 }
 
 .text-section {
-    width: 50%;
+    width: 110%;
     background-color: #1a9ce8;
     display: flex;
     flex-direction: column;
@@ -58,13 +58,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #444;
+    background-color: #070606;
 }
 
 .image-section img {
     width: 100%;
 
     height: auto;
-    border-radius: 0;
+    border-radius: 0 10px 10px 0;
 }
 
